--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -6,12 +6,13 @@
   background-color: #1C1C21;
   align-items: center;
   justify-content: center;
+  height: 8vh;
 }
 
 
 .main {
   width: 100%;
-  height: 100%;
+  height: 92vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,10 +20,11 @@
 }
 
 .mainContent {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 40px;
   max-width: 1280px;
   width: 100%;
+  height: 92vh;
 }
