--- a/src/components/appHeader/AppHeader.module.css
+++ b/src/components/appHeader/AppHeader.module.css
@@ -1,4 +1,12 @@
 
+.header {
+    display: flex;
+    background-color: #1C1C21;
+    align-items: center;
+    justify-content: center;
+    height: 8vh;
+    width: 100%;
+}
 
 .appContainer {
     width: 100%;
@@ -6,7 +14,12 @@
     align-items: center;
     justify-content: space-between;
     max-width: 1280px;
-    height: 5vh;
+}
+
+.navContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .buttonHeader {
