--- a/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -29,3 +29,34 @@
     flex-direction: row;
     align-items: center;
 }
+
+
+.burger {
+    padding: 16px 24px;
+    display: inline-block;
+    border-radius: var(--common-border-radius-s);
+    background: var(--background-element);
+    max-width: 536px;
+    width: 100%;
+    min-height: 80px;
+    font-family: 'Jet Brains Mono';
+    font-size: 16px;
+    line-height: 24px;
+    color: #F2F2F3;
+    flex-grow: 1;
+    box-sizing: border-box;
+    max-height: 80px;
+    text-align: center;
+
+    &.top {
+        border-radius: var(--top-constructor-item-border-radius);
+    }
+
+    &.bottom {
+        border-radius: var(--bottom-constructor-item-border-radius);
+    }
+}
+
+.hoverBorder {
+    border: 1px solid #F2F2F3;
+}
