--- a/src/components/BurgerCard/BurgerIngredientsCard.module.css
+++ b/src/components/BurgerCard/BurgerIngredientsCard.module.css
@@ -6,6 +6,9 @@
     align-items: center;
     flex-direction: column;
     position: relative;
+    cursor: pointer;
+    color: inherit; 
+    text-decoration: none; 
 }
 
 .text {
@@ -17,4 +20,11 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    
+}
+
+.link {
+    cursor: pointer;
+    color: inherit; 
+    text-decoration: none; 
 }
