--- a/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -34,3 +34,9 @@
     row-gap: 32px;
     column-gap: 24px;
 }
+
+.link {
+    cursor: pointer;
+    color: inherit; 
+    text-decoration: none; 
+}
