--- a/src/components/Modals/IngredientsDetails.module.css
+++ b/src/components/Modals/IngredientsDetails.module.css
@@ -21,3 +21,9 @@
     justify-content: center;
     align-items: center;
 }
+
+.link {
+    cursor: pointer;
+    color: inherit; 
+    text-decoration: none; 
+}
