--- a/src/components/feeds/info-card.module.css
+++ b/src/components/feeds/info-card.module.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     align-items: center;
     padding-top: 100px;
+    width: 40%;
   }
 
   .status {
@@ -26,6 +27,8 @@
     gap: 20px;
     display: flex;
     flex-direction: column;
+    height: 45%;
+    padding-right: 30px;
   }
 
   .row {
