--- a/src/pages/profile.module.css
+++ b/src/pages/profile.module.css
@@ -3,17 +3,17 @@
     height: 92vh;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: row;
 }
 
 .profileContent {
     max-width: 1280px;
     width: 100%;
-    height: 92vh;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    padding-top: 30px;
+    gap: 50px;
 }
 
 .profileRow {
@@ -35,4 +35,10 @@
 .logout {
     padding: 0;
     text-align: left;
+}
+
+.content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
